--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 {deps, [
         {lager, ".*",
             {git, "git://github.com/basho/lager.git", {tag, "2.2.3"}}},
-            {vernemq_dev, ".*", {git, "git://github.com/vernemq/vernemq_dev.git", {tag, "master"}}}
+            {vernemq_dev, ".*", {git, "git://github.com/vernemq/vernemq_dev.git", {tag, "1.1.0"}}}
         ]
         }.
 
